--- a/Agenda.csproj
+++ b/Agenda.csproj
@@ -95,5 +95,8 @@
   <ItemGroup>
     <Content Include="meeting.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="data\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
